--- a/index.html
+++ b/index.html
@@ -3,31 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My New Tab</title>
+    <title>Home Page</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="public/images/Ahmed-logo.jpg" />
   </head>
 
   <body>
-    <!-- Header with Theme Toggle Button -->
-    <header class="bar">
+    <!-- Content Container -->
+    <main>
+      <div class="container">
+        <!-- Left Content Container -->
+        <div class="leftContainer">
+          <div>
+            <h2>Todo List</h2>
+            <div class="inputContainer">
+              <form id="form">
+                <input
+                  type="text"
+                  id="taskInput"
+                  placeholder="Add a new task..."
+                />
+                <button type="submit" id="addTask">Add Task</button>
+              </form>
+            </div>
+          </div>
+
+          <div class="tasksContainer">
+            <h2>Tasks</h2>
+            <ul id="tasks"></ul>
+          </div>
+        </div>
+
+        <!-- Main Content Container -->
+        <div class="mainContainer"></div>
+      </div>
+    </main>
+
+    <!-- Footer with Theme Toggle Button -->
+    <footer class="bar">
       <button id="toggleTheme">
         <img
           id="toggleThemeIcon"
-          src="public/images/dark-mode.png"
+          src="public/images/dark-svgrepo-com.svg"
           alt="Toggle Theme Icon"
           width="50"
           height="50"
         />
       </button>
-    </header>
-
-    <!-- Main Content Container -->
-    <main>
-      <div class="container"></div>
-    </main>
-
-    <footer></footer>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
