feat: minor chnages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Footer with Theme Toggle Button -->
     <footer class="bar">
-      <button id="toggleTheme">
+      <button id="toggleTheme" title="Toggle Theme">
         <img
           id="toggleThemeIcon"
           src="public/images/dark-svgrepo-com.svg"
