--- a/index.html
+++ b/index.html
@@ -1,56 +1,48 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="public/images/Ahmed-logo.jpg" />
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Content Container -->
     <main>
-      <div class="container">
-        <!-- Left Content Container -->
-        <div class="leftContainer">
-          <div>
-            <h2>Todo List</h2>
-            <div class="inputContainer">
-              <form id="form">
-                <input
-                  type="text"
-                  id="taskInput"
-                  placeholder="Add a new task..."
-                />
-                <button type="submit" id="addTask">Add Task</button>
-              </form>
+        <div class="container">
+            <!-- Left Content Container -->
+            <div class="leftContainer">
+                <div class="todoList">
+                    <h2>Todo List</h2>
+                    <div class="inputContainer">
+                        <form id="form">
+                            <input type="text" id="taskInput" placeholder="Add a new task..." />
+                            <button type="submit" id="addTask">Add Task</button>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="tasksContainer">
+                    <h2>Tasks</h2>
+                    <!-- Tasks will be added here -->
+                </div>
+
+                <!-- Main Content Container -->
+                <div class="mainContainer"></div>
             </div>
-          </div>
-
-          <div class="tasksContainer">
-            <h2>Tasks</h2>
-            <ul id="tasks"></ul>
-          </div>
-        </div>
-
-        <!-- Main Content Container -->
-        <div class="mainContainer"></div>
-      </div>
     </main>
 
     <!-- Footer with Theme Toggle Button -->
     <footer class="bar">
-      <button id="toggleTheme" title="Toggle Theme">
-        <img
-          id="toggleThemeIcon"
-          src="public/images/dark-svgrepo-com.svg"
-          alt="Toggle Theme Icon"
-          width="50"
-          height="50"
-        />
-      </button>
+        <button id="toggleTheme" title="Toggle Theme">
+            <img id="toggleThemeIcon" src="public/images/dark-svgrepo-com.svg" alt="Toggle Theme Icon" width="50"
+                height="50" />
+        </button>
     </footer>
-    <script src="script.js"></script>
-  </body>
+    <script type="module" src="scripts/script.js"></script>
+</body>
+
 </html>
