feat: code refactor

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Footer with Theme Toggle Button -->
     <footer class="bar" aria-label="Footer">
-        <button id="toggleTheme" title="Toggle Theme">
+        <button id="toggleTheme" title="Toggle Theme" aria-label="Theme Toggle">
             <img id="toggleThemeIcon" src="public/images/dark-svgrepo-com.svg" alt="Toggle Theme Icon" width="50"
                 height="50" />
         </button>
