--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style/style.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="public/images/Ahmed-logo.jpg" />
 </head>
 
