feat: theme related changes

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <div class="tasksContainer" aria-label="Tasks Container">
                     <!-- Tasks will be added here -->
                 </div>
-
-                <!-- Main Content Container -->
-                <div class="mainContainer" aria-label="Right Container"></div>
             </div>
+
+            <!-- Main Content Container -->
+            <div class="rightContainer" aria-label="Right Container"></div>
     </main>
 
     <!-- Footer with Theme Toggle Button -->
