feat: closing tag issue fixed

--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
     <link href="style/style.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="public/images/Ahmed-logo.jpg" />
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Content Container -->
     <main aria-label="Main">
-        <div class="container" aria-label="COntainer">
-            <!-- Left Content Container -->
-            <div class="leftContainer" aria-label="Left Container">
-                <div class="todoList" aria-label="Task Form">
-                    <h2>Todo List</h2>
-                    <div class="inputContainer">
-                        <form id="form">
-                            <input type="text" id="taskInput" placeholder="Add a new task..." />
-                            <button type="submit" id="addTask">Add Task</button>
-                        </form>
-                    </div>
-                </div>
-
-                <div class="tasksContainer" aria-label="Tasks Container">
-                    <!-- Tasks will be added here -->
-                </div>
+      <div class="container" aria-label="Container">
+        <!-- Left Content Container -->
+        <div class="leftContainer">
+          <div class="todoList" aria-label="Task Form">
+            <h2>Todo List</h2>
+            <div class="inputContainer">
+              <form id="form">
+                <input
+                  type="text"
+                  id="taskInput"
+                  placeholder="Add a new task..."
+                />
+                <button type="submit" id="addTask">Add Task</button>
+              </form>
             </div>
+          </div>
 
-            <!-- Main Content Container -->
-            <div class="rightContainer" aria-label="Right Container"></div>
+          <div class="tasksContainer" aria-label="Tasks Container">
+            <!-- Tasks will be added here -->
+          </div>
+        </div>
+      </div>
+
+      <!-- Main Content Container -->
+      <div class="rightContainer"></div>
     </main>
 
     <!-- Footer with Theme Toggle Button -->
     <footer class="bar" aria-label="Footer">
-        <button id="toggleTheme" title="Toggle Theme" aria-label="Theme Toggle">
-            <img id="toggleThemeIcon" src="public/images/dark-svgrepo-com.svg" alt="Toggle Theme Icon" width="50"
-                height="50" />
-        </button>
+      <button id="toggleTheme" title="Toggle Theme" aria-label="Theme Toggle">
+        <img
+          id="toggleThemeIcon"
+          src="public/images/dark-svgrepo-com.svg"
+          alt="Toggle Theme Icon"
+          width="50"
+          height="50"
+        />
+      </button>
     </footer>
     <script type="module" src="scripts/script.js"></script>
-</body>
-
+  </body>
 </html>
